# 3Deflatten

./: .gitignore  3Deflatten.ini  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: build.yml  build.yml.old
scripts/: Setup.py  build_x64.bat  build_x86.bat  collect_runtime_dlls.py  collect_runtime_dlls_cuda12.py  collect_runtime_dlls_cuda13.py  download_model.py  export_vda.py  patch_ort_trtrtx_cc75.py  register.bat  unregister.bat
shaders/: stereo_warp.hlsl
src/: 3Deflatten.def  3Deflatten.rc  depth_estimator.cpp  depth_estimator.h  dllmain.cpp  filter.cpp  filter.h  guids.h  ideflatten.h  jbu_cuda.cu  jbu_cuda.h  logger.cpp  logger.h  prop_page.cpp  prop_page.h  resource.h  stereo_renderer.cpp  stereo_renderer.h
